[package]
name = "vulkan_tutorial"
version = "0.1.0"
authors = ["Matthew Pomes <the10thwiz@gmai.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.18"
winit = "0.22.1"
vulkano-shaders = "0.18.0"
cgmath = "0.17.0"
log = "0.4.8"
env_logger = "0.7.1"
png = "0.16.3"
